# ISIT-2025-Quantum-Hackathon

./: README.md
Final Presentation/: Amplitude Architects.pptx  Bell State Builders.pptx
Quantum Approximate Optimization Algorithm (QAOA)/demo_code/: QAOA_Demo_Code.ipynb
Quantum Computing 101/demo_code/: ISIT_Grover.ipynb  ISIT_Grover_Demo_Code.ipynb  ISIT_Qiskit_101_Demo_Code.ipynb
Quantum Kernel Methods/demo_code/: Quantum_Kernel_Methods_Demo_Code.ipynb
Quantum Neural Network (QNN)/demo_code/: pyproject.toml  qnn_1.ipynb  qnn_2.ipynb  tutorial_magics.py
Quantum Principal Component Analysis (Q-PCA)/demo_code/: Q-PCA_Demo_Code.ipynb
Tutorials/Quantum Computing 101/: resources.txt
Tutorials/Quantum Computing 101/demo_code/: ISIT_Qiskit_101_Demo_Code.ipynb
Tutorials/Quantum Kernel Methods/: references.txt
Tutorials/Quantum k-Nearest Algorithm (Q-kNN)/demo_code/: Q-kNN_Demo_Code.ipynb
Tutorials/Variational Quantum Auto Encoders (VQAE)/demo_code/: VQAE_Demo_Code.ipynb
Variational Quantum Auto Encoders (VQAE)/demo_code/: VQAE_Demo_Code.ipynb
