[project]
name = "isit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pylatexenc>=2.10",
    "qiskit==1.3.1",
    "qiskit-aer>=0.17.0",
    "qiskit-algorithms>=0.3.1",
    "qiskit-machine-learning==0.8.2",
]
